tests/negative/test_cn_asgn_cn_custom.orb
custom t (i32 cn);

fnc main () () {
    sym (a:t (cast t 0));
    = a (cast t 0);
};